# dt4mob-platform

.github/workflows/: build-certificate-service.yml  build-chart.yml  (+3 more)
dashboards/: ditto-cache-metrics.json  ditto-cluster-traffic.json  ditto-things-search-metrics.json  hono-ditto-message-metrics.json  mongodb-stalls.json  subsystems-message-metrics.json  timescale-vehicles-historical.json
ditto-controller/: .env  go.mod  main.go
docs/: build-manual.sh
dt4mob-controller/: .env.staging  .gitignore  Dockerfile  export_connection.tpl  go.mod  go.sum  main.go
dt4mob-garbage-collector/: .gitignore  Dockerfile  README.md  dockerfile  main.py  pyproject.toml
dt4mob-historical-api/: .gitignore  dockerfile  pyproject.toml
dt4mob-historical-api/app/: main.py
dt4mob-historical-api/app/database_engine/: TimeScaleEngineManager.py
dt4mob-historical-api/app/models/: ditto_events.py
dt4mob-historical-api/app/routers/: events.py
dt4mob-historical-api/app/services/: authentication_service.py  events_service.py
dt4mob-historical-api/app/settings/: __init__.py  timescale.py
dt4mob-historical-api/app/static/: swagger-initializer.js  swagger-ui-bundle.js  swagger-ui.css
dt4mob-historical-writer/: .gitignore  main.py  pyproject.toml
dt4mob-historical-writer/src/database_engines/: TimeScaleEngineManager.py
dt4mob-historical-writer/src/models/: ditto_events.py
dt4mob-historical-writer/src/services/DittoEventsManager/: __init__.py  ditto_events_manager.py
dt4mob-historical-writer/src/services/MessageProcessor/: message_processor.py
openslice/: .gitignore
(+262 files in other folders)
